--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -17,11 +17,19 @@ FOREACH(TEST_FILENAME ${TEST_SOURCES})
       cxx_std_17
   )
 
-  TARGET_COMPILE_OPTIONS(
-    ${TEST_NAME}
-    PRIVATE
-      -Wall -Werror
-  )
+  IF(MSVC)
+    TARGET_COMPILE_OPTIONS(
+      ${TEST_NAME}
+      PRIVATE
+        /W4 /WX
+    )
+  ELSE()
+    TARGET_COMPILE_OPTIONS(
+      ${TEST_NAME}
+      PRIVATE
+        -Wall -Werror
+    )
+  ENDIF()
 
   TARGET_LINK_LIBRARIES(
     ${TEST_NAME}
