--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ CMAKE_MINIMUM_REQUIRED(VERSION 3.6)
 
 PROJECT(
   PeeloResult
-  VERSION 0.5.0
+  VERSION 0.5.1
   DESCRIPTION "Header only C++ result type."
   HOMEPAGE_URL "https://github.com/peelonet/peelo-result"
   LANGUAGES CXX
@@ -71,5 +71,7 @@ INSTALL(
     include
 )
 
-ENABLE_TESTING()
-ADD_SUBDIRECTORY(test)
+IF(CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR)
+  ENABLE_TESTING()
+  ADD_SUBDIRECTORY(test)
+ENDIF()
