--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,4 +1,13 @@
-INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}../include)
+INCLUDE(FetchContent)
+
+FETCHCONTENT_DECLARE(
+  Catch2
+  GIT_REPOSITORY
+    https://github.com/catchorg/Catch2.git
+  GIT_TAG
+    v3.7.1
+)
+FETCHCONTENT_MAKEAVAILABLE(Catch2)
 
 FILE(GLOB TEST_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
 FOREACH(TEST_FILENAME ${TEST_SOURCES})
@@ -33,6 +42,7 @@ FOREACH(TEST_FILENAME ${TEST_SOURCES})
 
   TARGET_LINK_LIBRARIES(
     ${TEST_NAME}
+    Catch2::Catch2WithMain
     PeeloResult
   )
 
